The Tour of Heroes app displays a list of heroes in a Master/Detail view. The user can select a hero and see that hero's details. You used *ngFor to display a list. You used *ngIf to conditionally include or exclude a block of HTML. You can toggle a CSS style class with a class binding.

--- a/angular.json
+++ b/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "angular-tour-of-heroes"
+    }
+  },
+  "defaultProject": "angular-tour-of-heroes",
+  "cli": {
+    "analytics": "c93218ce-5a21-458f-ac8f-8f2b1cf1fda1"
+  }
 }
